objects/CloudDocument__c.object
<CustomObject>
    <description>To manage and store documents related to client cases, contacts, and intake.</description>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Cloud Documents</relationshipLabel>
        <relationshipName>CloudDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cloud Documents</relationshipLabel>
        <relationshipName>Cloud_Documents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecodedFileLocation__c</fullName>
        <label>Decoded File Location</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalDocument__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileContentPrefix__c</fullName>
        <label>File Content Prefix</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filetype__c</fullName>
        <label>File type</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FolderName__c</fullName>
        <label>Folder Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IntakeRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake Request</label>
        <referenceTo>Intake__c</referenceTo>
        <relationshipLabel>Cloud Documents</relationshipLabel>
        <relationshipName>Cloud_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Cloud Document</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Cloud Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cloud Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>